--- a/Front-End/src/components/Dashboard.scss
+++ b/Front-End/src/components/Dashboard.scss
@@ -1,3 +1,53 @@
+// body {
+//   background-repeat:no-repeat;
+//   background-image:url(https://irp.cdn-website.com/md/pexels/dms3rep/multi/pexels-photo-5485041.jpeg);
+//   background-size:cover;
+//   background-position:20% 30%;
+//   text-align:center;
+// }
+
 .title {
-  color: red;
+  color: teal;
+}
+
+.event-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 1rem;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th,
+td {
+  border: 1px solid #ffffff;
+  text-align: left;
+  padding: 8px;
+  font-size: 32px;
+}
+
+th {
+  background-color: rgb(117, 201, 250);
+}
+
+td {
+  background-color: rgb(205, 235, 253);
+}
+
+form {
+  display: flex;
+  gap: 5px;
+}
+
+form td:last-child {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+form * {
+  font-size: 28px;
 }
