--- a/Front-End/src/index.css
+++ b/Front-End/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,28 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+.login-container {
+  background-image:url(https://irp.cdn-website.com/md/pexels/dms3rep/multi/pexels-photo-269887.jpeg);
+	background-color:rgba(0,0,0,0);
+	background-position:50% 50%;
+	background-size:cover;
+	background-repeat:no-repeat;
+  background-attachment: fixed;
+	padding-top:0;
+	padding-bottom:0;
+	padding-right:0;
+	padding-left:0;
+	margin:0;
+	text-align:center;
+	color:rgb(255,255,255);
+}
+
+.dashboard-container {
+  background-repeat:no-repeat;
+  background-image:url(https://irp.cdn-website.com/md/pexels/dms3rep/multi/pexels-photo-5485041.jpeg);
+  background-size:cover;
+  background-position:20% 30%;
+  text-align:center;
 }
