--- a/Front-End/src/index.css
+++ b/Front-End/src/index.css
@@ -12,7 +12,7 @@ code {
     monospace;
 } */
 
-.login-container {
+/* .login-container {
   background-image:url(https://irp.cdn-website.com/md/pexels/dms3rep/multi/pexels-photo-269887.jpeg);
 	background-color:rgba(0,0,0,0);
 	background-position:50% 50%;
@@ -34,4 +34,4 @@ code {
   background-size:cover;
   background-position:20% 30%;
   text-align:center;
-}
+} */
