--- a/Front-End/src/pages/Login.scss
+++ b/Front-End/src/pages/Login.scss
@@ -1,4 +1,4 @@
-body.login-container {
+.login-container {
   background-image:url(https://irp.cdn-website.com/md/pexels/dms3rep/multi/pexels-photo-269887.jpeg);
 	background-color:rgba(0,0,0,0);
 	background-position:50% 50%;
