made create and edit buttons

--- a/Front-End/src/components/Dashboard.scss
+++ b/Front-End/src/components/Dashboard.scss
@@ -24,12 +24,13 @@ body {
 table {
   border-collapse: collapse;
   width: 100%;
+
 }
 
 th,
 td {
   border: 1px solid #ffffff;
-  text-align: left;
+  text-align:center;
   padding: 8px;
   font-size: 32px;
 }
