--- a/Front-End/src/pages/Register.scss
+++ b/Front-End/src/pages/Register.scss
@@ -1,30 +1,36 @@
 .register-container {
-  background-image:url(https://irp.cdn-website.com/md/pexels/dms3rep/multi/pexels-photo-269887.jpeg);
-	background-color:rgba(0,0,0,0);
-	background-position:50% 50%;
-	background-size:cover;
-	background-repeat:no-repeat;
-	padding-top:0;
-	padding-bottom:0;
-	padding-right:0;
-	padding-left:0;
-	margin:0;
-	text-align:center;
-	color:rgb(255,255,255);
+  background-image: url(https://irp.cdn-website.com/md/pexels/dms3rep/multi/pexels-photo-269887.jpeg);
+  background-color: rgba(0, 0, 0, 0);
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding-top: 0;
+  padding-bottom: 0;
+  padding-right: 0;
+  padding-left: 0;
+  margin: 0;
+  text-align: center;
+  color: rgb(255, 255, 255);
 }
 
 .register-wrapper {
-  display: inline-block;
-  border-radius: 20px;
-	background: rgba(255,255,255, 0.8);
-  color: rgb(27, 125, 155);
-  width: 30%;
-  margin-top: 100px;
-  margin-left: 10%;
-  padding: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
-label, input {
+.register-wrapper {
+  display: flex;
+  flex-direction: column;
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+  }
+}
+
+label,
+input {
   display: flex;
   justify-content: center;
 }
@@ -34,10 +40,10 @@ label {
 }
 
 .register-btn {
-    background-color:rgb(27, 125, 155); 
-    color: white;
-    border-radius: 10px;
-    border-color: black;
+  background-color: rgb(27, 125, 155);
+  color: white;
+  border-radius: 10px;
+  border-color: black;
 }
 
 .error-msg {
@@ -45,7 +51,7 @@ label {
 }
 
 .login-redirect:hover {
-  color:violet;
+  color: violet;
 }
 
 .title-align-right {
@@ -53,11 +59,11 @@ label {
 }
 
 .title {
-font-size: 60px;
+  font-size: 60px;
 }
 
 .slogan {
-  margin-top:10px;
+  margin-top: 10px;
 }
 
 footer {
@@ -69,4 +75,3 @@ footer {
   margin-bottom: 0px;
   color: rgb(27, 125, 155);
 }
-
