--- a/Front-End/src/pages/Login.scss
+++ b/Front-End/src/pages/Login.scss
@@ -1,18 +1,18 @@
-// .login-container {
-//   background-image:url(https://irp.cdn-website.com/md/pexels/dms3rep/multi/pexels-photo-269887.jpeg);
-// 	background-color:rgba(0,0,0,0);
-// 	background-position:50% 50%;
-// 	background-size:cover;
-// 	background-repeat:no-repeat;
-//   background-attachment: fixed;
-// 	padding-top:0;
-// 	padding-bottom:0;
-// 	padding-right:0;
-// 	padding-left:0;
-// 	margin:0;
-// 	text-align:center;
-// 	color:rgb(255,255,255);
-// }
+.login-container {
+  background-image:url(https://irp.cdn-website.com/md/pexels/dms3rep/multi/pexels-photo-269887.jpeg);
+	background-color:rgba(0,0,0,0);
+	background-position:50% 50%;
+	background-size:cover;
+	background-repeat:no-repeat;
+  background-attachment: fixed;
+	padding-top:0;
+	padding-bottom:0;
+	padding-right:0;
+	padding-left:0;
+	margin:0;
+	text-align:center;
+	color:rgb(255,255,255);
+}
 
 .login-wrapper {
   display: inline-block;
