--- a/Front-End/src/pages/Register.scss
+++ b/Front-End/src/pages/Register.scss
@@ -2,8 +2,8 @@
   background-image: url(https://irp.cdn-website.com/md/pexels/dms3rep/multi/pexels-photo-269887.jpeg);
   background-color: rgba(0, 0, 0, 0);
   background-position: 50% 50%;
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-size:cover;
+  background-repeat:no-repeat;
   padding-top: 0;
   padding-bottom: 0;
   padding-right: 0;
@@ -13,14 +13,21 @@
   color: rgb(255, 255, 255);
 }
 
-.register-wrapper {
-  display: flex;
-  flex-direction: column;
-}
+// .register-wrapper {
+//   display: flex;
+//   flex-direction: column;
+// }
 
 .register-wrapper {
   display: flex;
   flex-direction: column;
+  background: rgba(255,255,255, 0.8);
+  color: rgb(27, 125, 155);
+  border-radius: 20px;
+  width: 20%;
+  margin-top: 10%;
+  margin-left: 30%;
+  
   form {
     display: flex;
     flex-direction: column;
@@ -29,15 +36,10 @@
   }
 }
 
-label,
-input {
-  display: flex;
-  justify-content: center;
-}
 
-label {
-  margin-bottom: 20px;
-}
+// label {
+//   margin-bottom: 20px;
+// }
 
 .register-btn {
   background-color: rgb(27, 125, 155);
