more fixing in navbar

--- a/Front-End/src/components/Navbar.scss
+++ b/Front-End/src/components/Navbar.scss
@@ -12,12 +12,7 @@
     left: 0;
 }
 
-.logo.nav{
-  
-    margin: 10px;
+.logo{
+    font-size:x-large;
 }
 
-.span.nav{
- 
- justify-self: center;
-}
