--- a/Front-End/src/components/Navbar.scss
+++ b/Front-End/src/components/Navbar.scss
@@ -1,6 +1,4 @@
 .nav {
-    display: flex;
-    justify-content: space-evenly;
     background-color: #4056A1;
     height: 40px;
     width: 100%;
@@ -14,5 +12,22 @@
 
 .logo{
     font-size:x-large;
+    float: left;
 }
+.login-reg-container{
+display: flex;
+justify-content: flex-end;
 
+   
+}
+.login-span{
+    padding-left: 20px;
+    padding-right: 50px;
+}
+.register-span{
+    padding: 20px;
+}
+.btn{
+    margin: 50px;
+   
+   }
