Finishing the create-event feature.

--- a/Front-End/src/components/event-form.scss
+++ b/Front-End/src/components/event-form.scss
@@ -1,12 +1,23 @@
-.event-info {
+.event-page {
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.event-info {
+  width: 80%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: inherit;
+  align-items: center;
+  margin-top: 100px;
 }
-
+.event-input {
+  margin-bottom: 20px !important;
+  width: 50%;
+  margin: auto;
+}
 .event-card {
   display: flex;
   flex-direction: column;
@@ -40,4 +51,10 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+.add-item-icon {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
