--- a/Front-End/src/components/Navbar.scss
+++ b/Front-End/src/components/Navbar.scss
@@ -1,33 +1,47 @@
 .nav {
-    background-color: #4056A1;
-    height: 40px;
-    width: 100%;
-    color: #FFFFFF;
-    padding: 1.5em;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #4056a1;
+  height: 40px;
+  width: 100%;
+  color: #ffffff;
+  padding: 1.5em;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
 }
 
-.logo{
-    font-size:x-large;
-    float: left;
+.logo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: x-large;
 }
-.login-reg-container{
-display: flex;
-justify-content: flex-end;
-
-   
+.login-reg-container {
+  display: flex;
+  justify-content: flex-end;
 }
-.login-span{
-    padding-left: 20px;
-    padding-right: 50px;
+.login-span {
+  padding-left: 20px;
+  padding-right: 50px;
 }
-.register-span{
-    padding: 20px;
+.register-span {
+  padding: 20px;
 }
-.btn{
-    margin: 50px;
-   
-   }
+.btn {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: white;
+  font-size: smaller;
+  margin-right: 35px;
+}
+.welcom-user-name {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 70%;
+  justify-content: end;
+}
