create gift is done.

--- a/Front-End/src/pages/CreateGifts.scss
+++ b/Front-End/src/pages/CreateGifts.scss
@@ -5,3 +5,10 @@
   align-items: center;
   margin-top: 70px;
 }
+
+.gift-card {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 70px;
+}
