implement modal for confirmdelete and background formatting

--- a/Front-End/src/pages/Dashboard.scss
+++ b/Front-End/src/pages/Dashboard.scss
@@ -1,9 +1,13 @@
-body {
-  background-repeat:no-repeat;
-  background-image:url(https://irp.cdn-website.com/md/pexels/dms3rep/multi/pexels-photo-5485041.jpeg);
-  background-size:cover;
-  background-position:20% 30%;
-  text-align:center;
+// body {
+//   background-repeat:no-repeat;
+//   background-image:url(https://irp.cdn-website.com/md/pexels/dms3rep/multi/pexels-photo-5485041.jpeg);
+//   background-size:cover;
+//   background-position:20% 30%;
+//   text-align:center;
+// }
+
+.delete-warning {
+  color: red;
 }
 
 .title {
