--- a/Front-End/src/index.css
+++ b/Front-End/src/index.css
@@ -1,37 +1,15 @@
-/* body {
+body {
+  background-image:url(https://irp.cdn-website.com/md/pexels/dms3rep/multi/pexels-photo-5485041.jpeg);
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-position:50% 40%;
+  text-align:center;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
-
-/* .login-container {
-  background-image:url(https://irp.cdn-website.com/md/pexels/dms3rep/multi/pexels-photo-269887.jpeg);
-	background-color:rgba(0,0,0,0);
-	background-position:50% 50%;
-	background-size:cover;
-	background-repeat:no-repeat;
-  background-attachment: fixed;
-	padding-top:0;
-	padding-bottom:0;
-	padding-right:0;
-	padding-left:0;
-	margin:0;
-	text-align:center;
-	color:rgb(255,255,255);
+html, body {
+  min-height: 100vh;
 }
-
-.dashboard-container {
-  background-repeat:no-repeat;
-  background-image:url(https://irp.cdn-website.com/md/pexels/dms3rep/multi/pexels-photo-5485041.jpeg);
-  background-size:cover;
-  background-position:20% 30%;
-  text-align:center;
-} */
