nav and footer changes

--- a/Front-End/src/pages/Login.scss
+++ b/Front-End/src/pages/Login.scss
@@ -6,51 +6,51 @@
   min-height: 100vh;
 }
 
-// .login-wrapper {
-//   display: inline-block;
-//   border-radius: 20px;
-// 	background: rgba(255,255,255, 0.8);
-//   color: rgb(27, 125, 155);
-//   width: 30%;
-//   margin-top: 100px;
-//   margin-left: 10%;
-//   padding: 10px;
-// }
+.login-wrapper {
+  display: inline-block;
+  border-radius: 20px;
+	background: rgba(255,255,255, 0.8);
+  color: rgb(27, 125, 155);
+  width: 30%;
+  margin-top: 100px;
+  margin-left: 10%;
+  padding: 10px;
+}
 
-// label, input {
-//   display: flex;
-//   justify-content: center;
-// }
+label, input {
+  display: flex;
+  justify-content: center;
+}
 
-// label {
-//   margin-bottom: 20px;
-// }
+label {
+  margin-bottom: 20px;
+}
 
-// .login-btn {
-//     background-color:rgb(27, 125, 155); 
-//     color: white;
-//     border-radius: 10px;
-//     border-color: black;
-// }
+.login-btn {
+    background-color:rgb(27, 125, 155); 
+    color: white;
+    border-radius: 10px;
+    border-color: black;
+}
 
-// .error-msg {
-//   color: red;
-// }
+.error-msg {
+  color: red;
+}
 
-// .register-redirect:hover {
-//   color:violet;
-// }
+.register-redirect:hover {
+  color:violet;
+}
 
-// .title-align-right {
-//   display: inline-block;
-// }
+.title-align-right {
+  display: inline-block;
+}
 
-// .title {
-// font-size: 60px;
-// }
+.title {
+font-size: 60px;
+}
 
-// .slogan {
-//   margin-top:10px;
-// }
+.slogan {
+  margin-top:10px;
+}
 
 
