--- a/Front-End/src/components/Footer.scss
+++ b/Front-End/src/components/Footer.scss
@@ -1,3 +1,17 @@
-.footer{
-  display: flex;
+$secondary: #72D6C9;
+$primary: rgb(70, 197, 219);
+
+footer {
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+background-image: linear-gradient(to bottom left, $primary, $secondary);
+height: 40px;
+width: 100%;
+color: #ffffff;
+padding: 1.5em;
+position: fixed;
+z-index: 1;
+bottom: 0;
+left: 0;
 }
