--- a/Front-End/src/components/Navbar.scss
+++ b/Front-End/src/components/Navbar.scss
@@ -1,9 +1,13 @@
+$primary: rgb(70, 197, 219);
+$secondary: #72D6C9;
+$terinary: purple;
+
 .nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: #4056a1;
-  height: 40px;
+  background-image: linear-gradient(to bottom left, $primary, $secondary);
+  height: 20px;
   width: 100%;
   color: #ffffff;
   padding: 1.5em;
@@ -13,12 +17,18 @@
   left: 0;
 }
 
+.link {
+  color: white;
+}
+
 .logo {
   display: flex;
   flex-direction: row;
   align-items: center;
   font-size: x-large;
+  color: $terinary;
 }
+
 .login-reg-container {
   display: flex;
   justify-content: flex-end;
