fix navbar styling

--- a/Front-End/src/components/Navbar.scss
+++ b/Front-End/src/components/Navbar.scss
@@ -35,11 +35,21 @@ $terinary: purple;
 }
 .login-span {
   padding-left: 20px;
-  padding-right: 50px;
 }
+
 .register-span {
   padding: 20px;
 }
+
+.logout-span:hover {
+color: #0d6efd;
+cursor:pointer;
+}
+
+.logout-span {
+  padding-left: 20px;
+}
+
 .btn {
   display: flex;
   flex-direction: row;
