--- a/Front-End/src/components/Navbar.scss
+++ b/Front-End/src/components/Navbar.scss
@@ -25,8 +25,15 @@ $terinary: purple;
   display: flex;
   flex-direction: row;
   align-items: center;
-  font-size: x-large;
+  font-size: 50px;
   color: $terinary;
+  font-family: 'Road Rage', cursive;
+}
+
+img {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
 }
 
 .login-reg-container {
