--- a/Front-End/src/pages/Dashboard.scss
+++ b/Front-End/src/pages/Dashboard.scss
@@ -27,36 +27,52 @@
 
 table {
   border-collapse: collapse;
+  border-radius: 10px;
   width: 100%;
+}
 
+th:first-of-type {
+  border-top-left-radius: 10px;
+}
+th:last-of-type {
+  border-top-right-radius: 10px;
+}
+tr:last-of-type td:first-of-type {
+  border-bottom-left-radius: 10px;
+}
+tr:last-of-type td:last-of-type {
+  border-bottom-right-radius: 10px;
 }
 
 th,
 td {
   border: 1px solid #ffffff;
+  // border: none;
   text-align:center;
   padding: 8px;
   font-size: 32px;
 }
 
 th {
-  background-color: rgb(117, 201, 250);
+  // background-color: rgb(117, 201, 250);
+  background-color: teal;
+  text-transform: uppercase;
 }
 
 td {
-  background-color: rgb(205, 235, 253);
+  background-color: rgb(80, 196, 180);
 }
 
-form {
-  display: flex;
-  gap: 5px;
-}
+// form {
+//   display: flex;
+//   gap: 5px;
+// }
 
-form td:last-child {
-  display: flex;
-  justify-content: space-evenly;
-}
+// form td:last-child {
+//   display: flex;
+//   justify-content: space-evenly;
+// }
 
-form * {
-  font-size: 28px;
-}
+// form * {
+//   font-size: 28px;
+// }
