--- a/Front-End/src/index.css
+++ b/Front-End/src/index.css
@@ -5,9 +5,10 @@ body {
   background-position:50% 40%;
   text-align:center;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: 'lato', 'Helvetica Neue',
     sans-serif;
+    /* -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', */
 }
 
 html, body {
