--- a/Front-End/src/components/Footer.scss
+++ b/Front-End/src/components/Footer.scss
@@ -6,12 +6,16 @@ display: flex;
 flex-direction: row;
 justify-content: space-between;
 background-image: linear-gradient(to bottom left, $primary, $secondary);
-height: 40px;
+height: 100px;
 width: 100%;
 color: #ffffff;
 padding: 1.5em;
-position: fixed;
 z-index: 1;
 bottom: 0;
 left: 0;
+}
+
+.container {
+  display:flex;
+  flex-direction: column;
 }
