--- a/Front-End/src/index.css
+++ b/Front-End/src/index.css
@@ -11,6 +11,10 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', */
 }
 
-html, body {
+#root {
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
   min-height: 100vh;
+  height: 100%;
 }
