--- a/Front-End/src/pages/Login.scss
+++ b/Front-End/src/pages/Login.scss
@@ -12,8 +12,9 @@
 	background: rgba(255,255,255, 0.8);
   color: rgb(27, 125, 155);
   width: 30%;
-  margin-top: 100px;
-  margin-left: 10%;
+  margin-top: 200px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 10px;
 }
 
