fix formatting of register page

--- a/Front-End/src/pages/Login.scss
+++ b/Front-End/src/pages/Login.scss
@@ -27,31 +27,22 @@ label {
   margin-bottom: 20px;
 }
 
-.login-btn {
-    background-color:rgb(27, 125, 155); 
-    color: white;
-    border-radius: 10px;
-    border-color: black;
-}
-
 .error-msg {
   color: red;
 }
 
-.register-redirect:hover {
-  color:violet;
-}
 
-.title-align-right {
-  display: inline-block;
-}
 
-.title {
-font-size: 60px;
-}
+// .title-align-right {
+//   display: inline-block;
+// }
 
-.slogan {
-  margin-top:10px;
-}
+// .title {
+// font-size: 60px;
+// }
+
+// .slogan {
+//   margin-top:10px;
+// }
 
 
