--- a/Front-End/src/pages/Register.scss
+++ b/Front-End/src/pages/Register.scss
@@ -7,23 +7,18 @@
 }
 
 .register-wrapper {
-  display: flex;
-  flex-direction: column;
+  display: inline-block;
+  border-radius: 20px;
+	background: rgba(255,255,255, 0.8);
+  color: rgb(27, 125, 155);
+  width: 30%;
+  margin-top: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px;
 }
 
-.register-wrapper {
-  display: flex;
-  flex-direction: column;
-  form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-  }
-}
-
-label,
-input {
+label, input {
   display: flex;
   justify-content: center;
 }
@@ -32,30 +27,19 @@ label {
   margin-bottom: 20px;
 }
 
-.register-btn {
-  background-color: rgb(27, 125, 155);
-  color: white;
-  border-radius: 10px;
-  border-color: black;
-}
-
 .error-msg {
   color: red;
 }
 
-.login-redirect:hover {
-  color: violet;
-}
+// .title-align-right {
+//   display: inline-block;
+// }
 
-.title-align-right {
-  display: inline-block;
-}
+// .title {
+//   font-size: 60px;
+// }
 
-.title {
-  font-size: 60px;
-}
-
-.slogan {
-  margin-top: 10px;
-}
+// .slogan {
+//   margin-top: 10px;
+// }
 
