--- a/Front-End/src/components/Navbar.scss
+++ b/Front-End/src/components/Navbar.scss
@@ -39,7 +39,7 @@ $terinary: purple;
   font-family: 'Road Rage', cursive;
 }
 
-img {
+.orange {
   width: 50px;
   height: 50px;
   object-fit: cover;
