--- a/Front-End/src/pages/Register.scss
+++ b/Front-End/src/pages/Register.scss
@@ -1,20 +1,33 @@
+$primary: rgb(70, 197, 219);
+$secondary: #72D6C9;
+$terinary: rgb(209, 16, 113);
+$button: rgb(105, 102, 102);
+
 .register-background {
   background-image:url(https://irp.cdn-website.com/md/pexels/dms3rep/multi/pexels-photo-5485041.jpeg);
   background-repeat:no-repeat;
   background-size:cover;
-  background-position:50% 10%;
+  background-position:70% 30%;
   min-height: 100vh;
+}
+
+.parent-container {
+  display: inline-flex;
+  // justify-content: space-evenly;
+  align-items: center;
+  // align-content: space-between;
+  gap: 30px;
 }
 
 .register-wrapper {
   display: inline-block;
   border-radius: 20px;
 	background: rgba(255,255,255, 0.8);
-  color: rgb(27, 125, 155);
-  width: 30%;
-  margin-top: 200px;
-  margin-left: auto;
-  margin-right: auto;
+  color: $button;
+  width: 100%;
+  margin-top: 150px;
+  // margin-left: auto;
+  // margin-right: auto;
   padding: 10px;
 }
 
@@ -31,15 +44,46 @@ label {
   color: red;
 }
 
-// .title-align-right {
-//   display: inline-block;
+// .logo-container-2 {
+//   display: flex;
+//   flex-direction: row;
 // }
 
-// .title {
-//   font-size: 60px;
-// }
+.logo-2 {
+  font-size: 130px;
+  font-family: 'Road Rage', cursive;
+  color: $terinary;
+  width:100%;
+  // margin-top:250px;
+  // display: flex;
+  // justify-content: space-between;
+}
 
-// .slogan {
-//   margin-top: 10px;
-// }
+.orange-2 {
+  object-fit: cover;
+  width: 100px;
+  height: 100px;
+  margin-bottom: 100px;
+}
 
+.title-logo {
+  display: inline-flex;
+  // justify-content: space-evenly;
+  align-items: flex-end;
+  align-content: space-between;
+  gap: 30px;
+  margin-bottom: 10px;
+}
+
+.slogan {
+  color: $button;
+  // background: rgba(255,255,255, 0.8);
+  // border-radius: 20px;
+  // border-width: 30%;
+  // position: relative;
+  width:75%;
+}
+
+.logo-container-2 {
+margin-top: 150px;
+}
