--- a/Front-End/src/index.css
+++ b/Front-End/src/index.css
@@ -5,8 +5,9 @@ body {
   background-position:50% 40%;
   text-align:center;
   margin: 0;
-  font-family: 'lato', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Raleway', 'Open Sans', 'sans-serif';
+  /* 'lato', 'Helvetica Neue',
+    sans-serif; */
     /* -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', */
 }
