--- a/Front-End/src/index.css
+++ b/Front-End/src/index.css
@@ -6,6 +6,7 @@ body {
   text-align:center;
   margin: 0;
   font-family: 'Raleway', 'Open Sans', 'sans-serif';
+  color: rgb(105, 102, 102);
   /* 'lato', 'Helvetica Neue',
     sans-serif; */
     /* -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
