--- a/Front-End/src/components/CreateEventForm.scss
+++ b/Front-End/src/components/CreateEventForm.scss
@@ -55,6 +55,7 @@
   transform-origin: center center;
   transform: rotate(-0.6deg);
   width: 100%;
+  height: inherit;
 }
 
 .card .inner-card p {
@@ -75,12 +76,11 @@
   z-index: 0;
   position: relative;
   transform-origin: center center;
-  transform: rotate(-0.6deg);
   width: 100%;
+  height: 100%;
 }
 .card-text {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 40px;
 }
