--- a/Front-End/src/pages/Home.scss
+++ b/Front-End/src/pages/Home.scss
@@ -51,21 +51,30 @@ display:flex;
 justify-content: center;
 background: $primary;
 border-radius: 50%;
-border: dotted $secondary;
+border: dotted $terinary;
 width: 200px;
 height: 200px;
 }
 
-.reasons {
+.icons {
   display: flex;
   justify-content: center;
   gap: 100px;
   margin-top: -90px;
 }
 
-#words {
+#icon-children {
 display:flex;
 flex-direction: column;
 justify-content: center;
-font-size: 20px;
+color: $terinary;
+font-size: 80px;
+}
+
+.caption {
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
