--- a/Front-End/src/pages/Home.scss
+++ b/Front-End/src/pages/Home.scss
@@ -74,7 +74,14 @@ font-size: 80px;
 .caption {
   display: flex;
   justify-content: center;
-  gap: 100px;
+  gap: 60px;
   margin-top: 100px;
   margin-bottom: 100px;
+  color:$terinary;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+#arrow {
+  color: $primary;
 }
