--- a/Front-End/src/components/CreateEventForm.scss
+++ b/Front-End/src/components/CreateEventForm.scss
@@ -1,10 +1,10 @@
-.event-form {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  margin-left: 70px;
-}
+// .event-form {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: flex-start;
+//   justify-content: center;
+//   margin-left: 70px;
+// }
 
 .event-form-wrapper {
   display: flex;
