--- a/Front-End/src/pages/CreateEvent.scss
+++ b/Front-End/src/pages/CreateEvent.scss
@@ -54,7 +54,7 @@
   justify-content: center;
   align-items: center;
 }
+
 // .create-event-button {
-//   font-family: "Courier New", Courier, monospace;
-//   color: red;
+//   margin-left: 30px;
 // }
