--- a/Front-End/src/components/CreateEventForm.scss
+++ b/Front-End/src/components/CreateEventForm.scss
@@ -1,3 +1,8 @@
+$primary: rgb(70, 197, 219);
+$secondary: #72D6C9;
+$terinary: rgb(209, 16, 113);
+$link: #0d6efd;
+
 // .event-form {
 //   display: flex;
 //   flex-direction: column;
@@ -16,7 +21,19 @@
 .event-card-row {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+}
+
+.event-btn-fields {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 15px;
+}
+
+#event-btns {
+  display:flex;
+  // justify-content: center;
+  
 }
 
 .event-name {
@@ -25,10 +42,22 @@
   font-weight: revert;
   color: rgb(30, 136, 168);
 }
-.event-input-info {
-  font-family: revert;
-  font-style: italic;
-  color: #199ecd;
+
+#desc {
+  // display: inline;
+  color: $link;
+  border: solid 1px $link;
+  font-weight: bold;
+  border-radius: 1.2%;
+  padding: 10px;
+  text-transform: uppercase;
+  text-align: left;
+  font-size: 1.25rem;
+  width: 20em;
+  height: 200px;
+  overflow-wrap: break-word;
+
+ 
 }
 
 .card {
@@ -84,3 +113,9 @@
   flex-direction: column;
   align-items: center;
 }
+
+// .event-field span {
+//     display: inline-block;
+//     width: 5em;
+//     border: 1px solid black;
+// }
