--- a/Front-End/src/components/CreateGiftModel.scss
+++ b/Front-End/src/components/CreateGiftModel.scss
@@ -3,11 +3,12 @@
   flex-direction: column;
   justify-content: center;
   width: 500px;
-  height: 600px;
+  height: 650px;
   margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
-  background-color: rgb(226, 229, 240);
+  background-color:rgb(217, 236, 235);
+  border-radius: 10%;
 }
 
 .create--form {
@@ -20,12 +21,5 @@
 
 .modal-buttons {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
 }
-
-.close-button {
-  display: flex;
-  flex-direction: row;
-  // justify-content: right;
-}
-
