--- a/Front-End/src/components/CreateGiftModel.scss
+++ b/Front-End/src/components/CreateGiftModel.scss
@@ -4,8 +4,9 @@
   width: 30%;
   height: auto;
   min-height: max-content;
-  max-height: 100vh;
+  max-height: 85vh;
   margin-top: 5%;
+  margin-bottom: 5%;
   margin-left: auto;
   margin-right: auto;
   background-color: rgb(208, 236, 235);
