fix alert for edit event page and reservation on invitation page

--- a/Front-End/src/components/CreateGiftList.scss
+++ b/Front-End/src/components/CreateGiftList.scss
@@ -1,3 +1,10 @@
 .heart {
   color: red;
 }
+
+.truncate {
+  width: 250px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
