--- a/Front-End/src/components/CreateGiftModel.scss
+++ b/Front-End/src/components/CreateGiftModel.scss
@@ -1,4 +1,4 @@
-.create-gift-model {
+.create-gift-modal {
   display: flex;
   flex-direction: column;
   width: 30%;
@@ -15,7 +15,7 @@
   overflow-y: auto;
 }
 
-.create-Gift-form {
+.create-gift-form {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -40,5 +40,6 @@
 
 .create-event-btn {
   margin-top: -15px;
-  margin-left: 165px;
+  margin-left: auto;
+  margin-right: auto;
 }
