--- a/Front-End/src/components/GifterEventInfo.scss
+++ b/Front-End/src/components/GifterEventInfo.scss
@@ -1,7 +1,26 @@
+$primary: rgb(70, 197, 219);
+$secondary: #72D6C9;
+$terinary: #D11071;
+$link: #0d6efd;
+
 .event-page {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   font-size: xx-large;
+}
+
+.details {
+  font-size: medium;
+  width: 20%;
+  margin-bottom: 5px;
+}
+
+.description {
+  font-size: medium;
+  // border: solid $primary 1px;
+  // border-radius: 5px;
+  width: 20%;
+  padding: 5px;
 }
