--- a/Front-End/src/components/CreateGiftModel.scss
+++ b/Front-End/src/components/CreateGiftModel.scss
@@ -38,6 +38,11 @@
   margin-left: 30px;
 }
 
+#gift-alert {
+  margin-top: -15px;
+  margin-bottom: 15px;
+}
+
 .create-event-btn {
   margin-top: -15px;
   margin-left: auto;
