--- a/Front-End/src/pages/CreateEvent.scss
+++ b/Front-End/src/pages/CreateEvent.scss
@@ -14,6 +14,8 @@
   justify-content: center;
   align-items: center;
   margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .event-input {
   margin-bottom: 20px !important;
