--- a/Front-End/src/components/GifterEventInfo.scss
+++ b/Front-End/src/components/GifterEventInfo.scss
@@ -1,4 +1,4 @@
-$primary: rgb(70, 197, 219);
+$primary: #46C5DB;
 $secondary: #72D6C9;
 $terinary: #D11071;
 $link: #0d6efd;
@@ -19,8 +19,6 @@ $link: #0d6efd;
 
 .description {
   font-size: medium;
-  // border: solid $primary 1px;
-  // border-radius: 5px;
   width: 20%;
   padding: 5px;
 }
