--- a/Front-End/src/pages/Login.scss
+++ b/Front-End/src/pages/Login.scss
@@ -1,6 +1,6 @@
-$primary: rgb(70, 197, 219);
+$primary: #46C5DB;
 $secondary: #72d6c9;
-$terinary: rgb(209, 16, 113);
+$terinary: #D11071;
 $button: rgb(105, 102, 102);
 
 .login-background {
